# RoboticsCourses

./: .gitignore  Setup.sh
Exercises/CRM/: Ideas
Exercises/CRM/Prac01/: Prac01.tex
Exercises/CRM/Prac02/: Prac02.tex
Exercises/CRM/Prac03/: Prac03.tex
Exercises/CRM/Prac04/: Prac04.tex
Exercises/CRM/Prac05/: Prac05.tex
Exercises/CRM/Prac06/: Prac06.tex
Exercises/CRM/Prac07/: Prac07.tex
Exercises/CRM/Prac08/: Prac08.tex
Exercises/CRM/Prac09/: Prac09.tex
Exercises/CRM/Prac10/: Prac10.tex
Exercises/CRM/Prac11/: Prac11.tex
Exercises/Prac01/: Prac01.tex
Exercises/Prac02/: Prac02.tex
Exercises/Prac04/: Prac04.tex
Exercises/Prac05/: .#Prac05.tex  Prac05.tex  Smoothing.m  Smoothing.m~
Exercises/Prac05/Figures/: Grow1.dia
Exercises/Prac06/: Prac06.tex
Exercises/Prac06/Figures/: GoalPose.dia
Exercises/Prac07/: Prac07.tex
Exercises/RMYAI/Prac01/: Prac01.tex
Exercises/RMYAI/Prac02/: Prac02.tex
Exercises/RMYAI/Prac03/: Prac03.tex
Exercises/RMYAI/Prac04/: Prac04.tex
Exercises/RMYAI/Prac06/: Prac06.tex  Simulation.m
Exercises/RMYAI/Prac07/: Prac07.tex
LectureNotes/: LectureNotes.tex  References.bib  References.bib~
LectureNotes/CRM/: CRM.tex
LectureNotes/RMYAI/: RMYAI.tex
Prerequisites/: Setup.sh
catkin_ws/src/bring_up/: package.xml
catkin_ws/src/tools/justina_tools/: CMakeLists.txt  package.xml
catkin_ws/src/tools/justina_tools/include/justina_tools/: JustinaHRI.h  JustinaHardware.h  JustinaNavigation.h
catkin_ws/src/tools/justina_tools/src/: JustinaHRI.cpp  JustinaHardware.cpp  JustinaNavigation.cpp
(+87 files in other folders)
